--- a/hyper-dots.ipynb
+++ b/hyper-dots.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 2,
    "id": "southeast-poverty",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "incorporated-maine",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 4,
    "id": "basic-release",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "id": "dominant-draft",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 10,
    "id": "pregnant-sentence",
    "metadata": {},
    "outputs": [],
@@ -1092,7 +1092,9 @@
    "cell_type": "code",
    "execution_count": 292,
    "id": "living-functionality",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1115,7 +1117,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 35,
+   "id": "featured-playback",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alnew = [\n",
+    "    {\n",
+    "        'x': 795,\n",
+    "        'y': 494,\n",
+    "        'px1': 2331,\n",
+    "        'px2': 956,\n",
+    "        'px3': 627,\n",
+    "        'bg':39,\n",
+    "        'sh': 73481\n",
+    "    },\n",
+    "    {\n",
+    "        'x': 795,\n",
+    "        'y': 494,\n",
+    "        'px1':3417,\n",
+    "        'px2': 595,\n",
+    "        'px3': 800,\n",
+    "        'bg':41,\n",
+    "        'sh': 0\n",
+    "    },\n",
+    "    {\n",
+    "        'x': 795,\n",
+    "        'y': 494,\n",
+    "        'px1': 3547,\n",
+    "        'px2': 942,\n",
+    "        'px3': 848,\n",
+    "        'bg': 44,\n",
+    "        'sh': 73481\n",
+    "    },\n",
+    "    {\n",
+    "        'x': 795,\n",
+    "        'y': 494,\n",
+    "        'px1': 2451,\n",
+    "        'px2': 662,\n",
+    "        'px3': 793,\n",
+    "        'bg': 44,\n",
+    "        'sh': 73481\n",
+    "    },\n",
+    "     {\n",
+    "        'x': 795,\n",
+    "        'y': 494,\n",
+    "        'px1': 2620,\n",
+    "        'px2': 742,\n",
+    "        'px3': 967,\n",
+    "        'bg': 51,\n",
+    "        'sh': 73481\n",
+    "     }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "mounted-valuable",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "al_col = preProcess(alnew)\n",
+    "als_col = Dots(al_col[0], al_col[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "editorial-lodging",
    "metadata": {},
    "outputs": [
@@ -1123,12 +1192,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[94.11092052601487, 95.03208937485144, 95.31390134529148, 95.62358276643991, 95.4997631454287, 95.25495750708215, 95.86127167630057, 95.25872442839952, 95.43875897198426, 94.67455621301775, 95.23569447945552, 95.81077900682513, 95.01059072722994, 94.8921398462683, 94.88977955911824, 95.06421556283053, 94.89405157007914, 94.51837769328264]\n"
+      "[77.98570942497449, 89.14708212305254, 82.67642199669577, 85.78047042052745, 84.11918795022922]\n"
      ]
     }
    ],
    "source": [
-    "print(alum3.arr_px9n)"
+    "print(als_col.arr_px1n)"
    ]
   }
  ],
