--- a/hyper-dots.ipynb
+++ b/hyper-dots.ipynb
@@ -28,6 +28,21 @@
    "outputs": [],
    "source": [
     "class Dot:\n",
+    "    '''\n",
+    "            Class defining single dot.\n",
+    "            Initialization parameters are:\n",
+    "                px1 - brightness level of the brightest pixel\n",
+    "                px9 - total brightness of the 3x3 pixel square. The central pixel of the square is the brightest pixel\n",
+    "                px25 - total brightness of the 5x5 pixel square. The central pixel of the square is the brightest pixel\n",
+    "                bg - the level of the background brightness \n",
+    "      \n",
+    "            Calculated properties are:\n",
+    "                px1_perc - px1 to px25 ratio (without considering background brightness)\n",
+    "                px9_perc - px9 to px25 ratio (without considering background brightness)\n",
+    "                px1_perc_norm - px1 to px25 ratio (considering background brightness)\n",
+    "                px9_perc_norm - px9 to px25 ratio (considering background brightness)\n",
+    "             \n",
+    "        '''s\n",
     "    def __init__(self, px1, px9, px25, bg):\n",
     "        self.px1 = px1\n",
     "        self.px9 = px9\n",
@@ -91,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "id": "federal-stable",
    "metadata": {},
    "outputs": [
@@ -101,7 +116,7 @@
        "[-9, -8, -7, -6, -5, -4, -3, -2, -1]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "id": "wanted-catering",
    "metadata": {},
    "outputs": [
@@ -131,7 +146,7 @@
        " [2845, 3789, 4727, 45]]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 8,
    "id": "reasonable-challenge",
    "metadata": {},
    "outputs": [],
@@ -152,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 9,
    "id": "naval-dakota",
    "metadata": {},
    "outputs": [
@@ -170,7 +185,7 @@
        " 77.73459189339256]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 10,
    "id": "tribal-reliance",
    "metadata": {},
    "outputs": [
@@ -204,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "id": "rental-sampling",
    "metadata": {},
    "outputs": [],
@@ -217,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "id": "internal-cheese",
    "metadata": {},
    "outputs": [],
@@ -232,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 13,
    "id": "naughty-partner",
    "metadata": {},
    "outputs": [
@@ -260,7 +275,7 @@
        " 92]"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,17 +286,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 14,
    "id": "developmental-tyler",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x119f7bdf0>]"
+       "[<matplotlib.lines.Line2D at 0x10c47ea90>]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -308,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "id": "committed-september",
    "metadata": {},
    "outputs": [],
@@ -321,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "id": "reduced-jacob",
    "metadata": {},
    "outputs": [],
@@ -331,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 17,
    "id": "consolidated-assurance",
    "metadata": {},
    "outputs": [
@@ -341,7 +356,7 @@
        "[83.7483266398929, 80.69477592150623]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 18,
    "id": "careful-award",
    "metadata": {},
    "outputs": [],
@@ -373,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 19,
    "id": "polished-smell",
    "metadata": {},
    "outputs": [
@@ -383,7 +398,7 @@
        "1.0503049618957292"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 20,
    "id": "hispanic-swedish",
    "metadata": {},
    "outputs": [],
@@ -404,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 21,
    "id": "requested-broad",
    "metadata": {},
    "outputs": [
@@ -427,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 22,
    "id": "running-webcam",
    "metadata": {},
    "outputs": [
@@ -442,7 +457,7 @@
        " 93.46901579586877]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 23,
    "id": "subtle-invitation",
    "metadata": {},
    "outputs": [],
@@ -645,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "pregnant-sentence",
    "metadata": {},
    "outputs": [],
@@ -663,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 25,
    "id": "hungry-workplace",
    "metadata": {
     "scrolled": true
@@ -690,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 26,
    "id": "nutritional-corps",
    "metadata": {},
    "outputs": [],
